added name info-aspirations list-changed background color

--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     </head>
 
     <body>
-        <h1>Hello World!</h1>
+        <h1>Hello Cuties!</h1>
+        <h2>Has anyone told you that you look good today?</h2>
+        <p>Hi! My name is Georgia. Some people call me Peachy. You can choose to use the name you prefer. </p>
+        <!-- Learn how to insert a counter to see vote between Georgia and Peachy-->
+        <p>As many do, I have some aspirations and I have listed them here in a very particular order.</p>
+            <ol>
+                <li> Making people laugh</li>
+                <li> Being a good dog mom</li>
+                <li> Curing my small brain syndrome (SBS) by learning new things</li>
+                <li> Profit</li>
+            </ol>
+            
         <script src="script.js"></script>
     </body>
 </html>
