Dog info and Favorite food

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     </head>
 
     <body>
+        <script src="script.js"></script>
         <h1>Hello Cuties!</h1>
         <h2>Has anyone told you that you look good today?</h2>
         <p>Hi! My name is Georgia. Some people call me Peachy. You can choose to use the name you prefer. </p>
         <!-- Learn how to insert a counter to see vote between Georgia and Peachy-->
+
         <p>As many do, I have some aspirations and I have listed them here in a very particular order.</p>
             <ol>
                 <li> Making people laugh</li>
@@ -17,7 +19,12 @@
                 <li> Curing my small brain syndrome (SBS) by learning new things</li>
                 <li> Profit</li>
             </ol>
-            
-        <script src="script.js"></script>
+
+        <p>As mentioned, I am a dog mom. Click here to see a picture my Josie's best pinto bean impression</p>
+        <!-- add photo of Josie -->
+
+        <p> Speaking of food, I love the stuff. So original. I know. Can you guess what my favorite food is? (hint: its not peaches)</p>
+        <!-- add a really sexy video of carbonara. Have it hidden until you mouse hover or click. Some fancy italian music should be playing as well-->
+
     </body>
 </html>
