--- a/index.html
+++ b/index.html
@@ -20,11 +20,17 @@
                 <li> Profit</li>
             </ol>
 
-        <p>As mentioned, I am a dog mom. Click here to see a picture my Josie's best pinto bean impression</p>
-        <!-- add photo of Josie -->
+        <p>As mentioned, I am a dog mom. Here you can see Josie's best pinto bean impression</p>
+        <div class="beans">
+            <img src="/media/pinto bean.jpg" alt="Josie Photo">
+            <img src="/media/pinto bean.jpg" alt="Real Pinto">
+        </div>
+        <!-- add photo of a pinto bean that switches to photo of Josie with mouse hover. images broken, add them through ubuntu?
+        ~/Development/code/prework/mywebsite -->
 
         <p> Speaking of food, I love the stuff. So original. I know. Can you guess what my favorite food is? (hint: its not peaches)</p>
-        <!-- add a really sexy video of carbonara. Have it hidden until you mouse hover or click. Some fancy italian music should be playing as well-->
+        <!-- add a really sexy video of carbonara. Have it hidden until you mouse hover or click. Some fancy italian music should be playing as well
+        Okay stock vids are hella expensive. oh gee darn, im gonna have to make my own. Oh no....-->
 
     </body>
 </html>
